@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.3"
-#define public MagickPackageVersionAddendum ".020081023"
+#define public MagickPackageVersionAddendum ".020081024"
 #define public MagickPackageReleaseDate "unreleased"
