@@ -2023,8 +2023,8 @@ static Image *ReadTIFFImage(const ImageInfo *image_info,
                     rows_remaining--;
 
                     if (image->previous == (Image *) NULL)
-                      if (QuantumTick(y,image->rows))
-                        if (!MagickMonitorFormatted(y,image->rows,exception,
+                      if (QuantumTick(y+image->rows*sample,image->rows*max_sample))
+                        if (!MagickMonitorFormatted(y+image->rows*sample,image->rows*max_sample,exception,
                                                     LoadImageText,image->filename))
                           {
                             status=MagickFail;
