@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-10-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Fix progress monitor for the case
+        of reading planar stripped images.
+
+</UL>
+<p>
 2008-10-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
